update image of goalie

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@ const myGameArea = {
           <div class="left-bars">
             <div class="subtitle">How many goals can you score?</div>
           </div>
-          
-          <canvas id="penalty-canvas" width="900px" height="550px"></canvas>
+          <canvas id="penalty-canvas" width="900px" height="550px">
+
+            <img id="goalie" width="50" height="50" background-color="white" src="goalkeeper2.png" alt="">
+          </canvas>
           
           <script src="penaltyKicker3.js"></script>
         </div>
