add instructions and score table

--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@ const myGameArea = {
           
           <script src="penaltyKicker3.js"></script>
         </div>
-        <div class="score-card">
+        <div class="under-canvas">
+          <div class="container">
+            <div class="instructions">Instructions:</div>
+            <p></p>
             <div class="top-score">Top Score:</div>
+          </div>
         </div>
       </body>
 </html>
