ball image changed

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ const myGameArea = {
           <canvas id="penalty-canvas" width="900px" height="550px">
 
             <img id="goalie" width="50" height="50" background-color="white" src="goalkeeper2.png" alt="">
+            <img id="soccer-ball" width="5" height="5" src="soccer-ball.png" alt="" />
           </canvas>
           
           <script src="penaltyKicker3.js"></script>
