progress in outside ball

--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@ const myGameArea = {
             <h1 class="title">PenaltyKicKer</h1>
         </div>
         <div class="Main-page" id="game-container">
-          <div class="left-bars">
-            <div class="subtitle">How many goals can you score?</div>
-          </div>
+
           <canvas id="penalty-canvas" width="900px" height="550px">
 
-            <img id="goalie" width="50" height="50" background-color="white" src="goalkeeper2.png" alt="">
+            <img id="goalie" src="goalkeeper2.png" alt="">
             <img id="soccer-ball" width="5" height="5" src="soccer-ball.png" alt="" />
           </canvas>
           
